<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        tools:context=".MainActivity" />
    <EditText 
        android:id="@+id/inputItem"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:inputType="text"
        android:hint="@string/prompt" ></EditText>    
     <EditText
         android:id="@+id/inputQty"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:inputType="number"
         android:hint="@string/qty"
         ></EditText>
     <Button
         android:id="@+id/button"
         android:layout_height="wrap_content"
         android:layout_width="fill_parent"
         android:text="@string/enter"
         android:onClick="onClickAdd" >              </Button>
     <EditText 
         android:id="@+id/inputSearch"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:inputType="text"
         android:hint="@string/search" >         
     </EditText>
     <ListView 
         android:id="@+id/list"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" >
     </ListView> 
 </LinearLayout>
